--- a/JS/异步和同步、阻塞和非阻塞.md
+++ b/JS/异步和同步、阻塞和非阻塞.md
@@ -33,6 +33,10 @@
 
 比如一段同步代码阻塞了，这时候阻塞的对象仅仅是当前线程，可是浏览器或者操作系统有多个线程，其他线程并没有阻塞，所以从操作系统或者浏览器的层面来看，是会有同步非阻塞的。但是永远不会有异步阻塞的情况
 
+<br>
+
+参考资料：
+
 > https://www.zhihu.com/question/39565359?sort=created
 
 > https://www.zhihu.com/question/19732473
