--- a/JS/深拷贝和浅拷贝.md
+++ b/JS/深拷贝和浅拷贝.md
@@ -107,4 +107,8 @@ a赋值给b，在栈内存中其实是将a的地址复制一份给b，此时a和
 
 a和b之间copy时都是按值传递，所以a和b没有关联，所以这是一次深拷贝
 
+<br>
+
+参考资料：
+
 ![](http://ww1.sinaimg.cn/large/006FubJZgy1fpagg82oe1j3099065jrn.jpg)
