--- a/JS/深拷贝和浅拷贝.md
+++ b/JS/深拷贝和浅拷贝.md
@@ -81,15 +81,16 @@ a赋值给b，在栈内存中其实是将a的地址复制一份给b，此时a和
 
 此时的情况是知道当前对象的结构，如果不知道当前对象的结构如何进行深拷贝呢？可以通过递归进行深拷贝
 
-    function copy(a, b) {
+    function copy(a, c) {
         var c = c || {}
         for(var i in a) {
             if(typeof a[i] == 'object') {
                 if(a[i].constructor == Array) {
-                    copy(a[i], c[i])
-                } else if(a[i].constructor == Object) {
-                    copy(a[i], c[i])
+                    c[i] = []
+                } else {
+                    c[i] = {}
                 }
+                copy(a[i], c[i])
             } else {
                 c[i] = a[i]
             }
