--- a/算法和数据结构/排序.md
+++ b/算法和数据结构/排序.md
@@ -41,4 +41,18 @@
 
 ### 选择排序
 
-基本思想：相当于分两部分，一部分为有序数组（刚开始是空），另一部分是给未排序数组
+基本思想：相当于分两部分，一部分为有序数组（刚开始是空），另一部分是给未排序数组，刚开始选择未排序部分的一个元素，标记最小值索引为当前元素下标，依次和后面未排序的元素进行比较，如果有比当前元素小的，则将最小值索引进行修改，全部比完后将最小值放到有序数组尾部，以此类推。
+
+  function choose(arr) {
+    if (!arr.length) return;
+    for (let i = 0; i < arr.length - 1; i++) {
+      let minIndex = i;
+      for (let j = i + 1; j < arr.length - 1; j++) {
+        minIndex = arr[j] < arr[minIndex] ? j : minIndex;
+      }
+      let value = arr[i];
+      arr[i] = arr[minIndex];
+      arr[minIndex] = value;
+    }
+    return arr;
+  }
