--- a/算法和数据结构/排序.md
+++ b/算法和数据结构/排序.md
@@ -28,7 +28,7 @@
     if (!arr.length) return;
     for (let i = 1; i < arr.length - 1; i++) {
       for (let j = 0; j < i; j++) {
-        if (arr[i] > arr[j]>) {
+        if (arr[i] > arr[j]) {
           let value = arr[j];
           arr[j] = arr[i];
           arr[i] = value;
