--- a/算法和数据结构/位运算.md
+++ b/算法和数据结构/位运算.md
@@ -8,17 +8,21 @@
 
 原因：二进制偶数最后一位都是0，奇数最后一位是1
 
+```javascript
   function odd(n) {
     return n & 1 !== 0; 
   }
+```
 
 示例2：判断一个数是不是2的整数次幂
 
 原因：如果是2的倍数的二进制最后一位都是0，其他位都是1，而小一位的数除了最后一位都是0，最后一位是1，所以相与正好是0
 
+```javascript
   function log2(n) {
     return n & (n - 1) === 0;
   }
+```
 
 ### 或 |
 
@@ -31,22 +35,25 @@
 
 示例3：
 
+```javascript
   8 ^ 7 = 15
   8 ^ 8 = 0
 
   1000 ^ 0111 = 1111 -> 15
   1000 ^ 1000 = 0000 -> 0
+```
 
 异或可以用作不进位加法运算，进位运算公式则为a ^ b + ((a & b) << 1)
 
 示例4： 两个数不适用四则运算求和
 
+```javascript
   function add(a, b) {
     if (a === 0) return b;
     if (b === 0) return a;
     return ((a ^ b) + ((a & b) << 1);
   }
-
+```
 
 
 #### 左移 <<
@@ -68,6 +75,7 @@
 
 可以根据示例2的规律，因为每次和比自己小的数与就是抹掉将最后一位为1的数变为0，每次和自己小1的数与，然后与完的结果继续和小于自己1的数与，然后记录与的次数就是有多少个1
 
+```javascript
   function count(n) {
     let res = 0;
     while (n != 0) {
@@ -76,3 +84,8 @@
     }
     return res;
   }
+```
+
+参考资料
+
+> https://juejin.im/post/5b55e3e85188251aff216311#heading-3
