--- a/算法和数据结构/数据结构/链表.md
+++ b/算法和数据结构/数据结构/链表.md
@@ -2,7 +2,7 @@
 
 ### 单向列表
 
-
+  ```javascript
   function Node(item) {
     this.element = item;
     this.next = null;
@@ -54,10 +54,11 @@
       currNode = currNode.next;
     }
   }
+  ```
 
 ### 双向列表
 
-
+  ```javascript
   function BothNode(item) {
     this.element = item;
     this.next = null;
@@ -102,10 +103,11 @@
       currNode = currNode.next;
     }
   }
+  ```
 
 ### 循环列表
 
-
+  ```javascript
   function Node(item) {
     this.element = item;
     this.next = null;
@@ -158,3 +160,4 @@
       currNode = currNode.next;
     }
   }
+  ```
